# src/user/userController.js
@@ -2,6 +2,7 @@ import { response } from "../../config/response.js";
 import { status } from "../../config/response.status.js";
 
 import userService from "./userService.js";
+import userProvider from "./userProvider.js";
 
 const userSignin = async (req, res, next) => {
     res.send(response(status.SUCCESS, await userService.joinUser(req.body)));
@@ -10,7 +11,21 @@ const userSignin = async (req, res, next) => {
 const addUserMission = async (req, res, next) => {
     res.send(response(status.SUCCESS, await userService.addUserMission(req.body)));
 }
+
+const getUserMissionsByUserId = async (req, res, next) => {
+    const { userID, page = 1, pageSize = 10 } = req.query;
+    const missionPagination = await userProvider.getUserMissionsByUserId(userID, parseInt(page), parseInt(pageSize));
+    res.send(response(status.SUCCESS, missionPagination));
+}
+
+const completeUserMission = async (req, res, next) => {
+    res.send(response(status.SUCCESS, await userService.completeUserMission(req.body)));
+}
+
+
 export default {
     userSignin,
-    addUserMission
+    addUserMission,
+    completeUserMission,
+    getUserMissionsByUserId
 };
